add: manual mode * add null/empty test * add messages in exception